# trailine

./: .gitignore  LICENSE  README.md  docker-compose-local.yaml
.github/: .CONTRIBUTING.md  (+1 more)
server/: .coveragerc  DockerFile.local  README.md  manage.py  pyproject.toml
server/admin/: README.md  pyproject.toml
server/admin/src/admin/: __init__.py  base.py  config.py  constants.py  main.py  utils.py
server/api/: .coveragerc  README.md  pyproject.toml
server/api/src/api/: __init__.py  main.py
server/api/src/tests/: conftest.py  factories.py
server/api/src/tests/data/: course_intervals.py  places.py
server/api/src/tests/fakes/: weather.py
server/api/src/tests/integrations/: common.py
server/api/src/tests/integrations/course/: test_detail_course.py  test_list_course_difficulty.py  test_list_course_style.py  test_search_course.py  test_search_course_intervals.py
server/api/src/tests/integrations/health/: test_healthcheck.py
server/api/src/tests/integrations/weather/: test_weather_current.py
server/api/src/tests/units/course/: test_get_course_location.py
server/api/src/tests/units/weather/: test_weather_current.py
server/api/src/trailine_api/: __init__.py  config.py  container.py  exception_handler.py  main.py  settings.py
server/api/src/trailine_api/common/: async_utils.py  cache.py  db.py  exc.py  logger.py  types.py  utils.py
server/api/src/trailine_api/integrations/: external_api.py
server/api/src/trailine_api/integrations/weather/: datago.py  interface.py  kma_mountain.py  schemas.py  utils.py
server/api/src/trailine_api/middlewares/: request_logger.py
server/api/src/trailine_api/repositories/: course_repositories.py  place_repositories.py  weather_repositories.py
server/api/src/trailine_api/routers/: __init__.py
server/api/src/trailine_api/routers/v1/: __init__.py  course.py  health.py  weather.py
server/api/src/trailine_api/routers/v2/: __init__.py  health.py
server/api/src/trailine_api/schemas/: course.py  place.py  point.py  weather.py
server/api/src/trailine_api/services/: course_services.py  weather_services.py
server/docs/: http_client_design.md
server/model/: README.md  alembic.ini  pyproject.toml
server/model/migrations/: env.py
server/model/migrations/versions/: 02d6c341015b_create_kma_mountain_forecase_area.py  0c9be5c16f98_create_table_course_image.py  1f3476c6d9fe_split_description_to_ab_and_ba.py  3b22c670fca4_create_place.py  4ff1d7c882f1_set_unique_contraint_in_place_image.py  501e9bf51d6e_create_kma_mountain_weather_area.py  581116434553_create_course_interval_difficulty_table.py  5ba34702228c_alter_course_interval_difficulty_table.py  614ca792203b_alter_table_course_course_interval_add_.py  7155a61f9414_create_user_table.py  7840890fad1b_create_table_course_difficulty.py  796bc73bb464_create_table_course_style.py  7fc70b96bb4d_create_table_place_image.py  8c1e159e1aae_create_table_course.py  9d3e00bdaa98_add_is_searchable_in_place.py  9ee2e1377a50_alter_table_course_course_interval_.py  c00b18ad1e35_set_uniqueconstraint_in_image_tables.py  d0f088a14dc8_create_table_kma_middle_areas.py  eef119624e34_add_columns_length_and_duration_in_.py  f32279198f69_add_table_course_interval.py  f73deb7928d8_create_table_in_alpha_0_3_0.py  fb81bd97110a_create_table_course_interval_image.py
server/model/src/trailine_model/: base.py  example.py
server/model/src/trailine_model/models/: course.py  forecast.py  place.py  user.py  weather.py
server/scripts/: README.md  pyproject.toml
server/scripts/src/trailine_scripts/: add_kma_mountain_areas.py  upload_course_intervals.py
server/scripts/src/trailine_scripts/common/: database.py
server/trailine/apps/api/v1/: urls.py
server/trailine/apps/api/v1/auth/: serializers.py  services.py  types.py  urls.py  utils.py  views.py
server/trailine/apps/api/v1/health/: urls.py  views.py
server/trailine/apps/api/v1/privacy_terms/: serializers.py  services.py  urls.py  views.py
server/trailine/apps/api/v1/users/: serializers.py  urls.py  views.py
server/trailine/apps/common/: enums.py  exc.py  exc_handler.py  throttles.py  types.py  utils.py
server/trailine/apps/course/: admin.py  apps.py  forms.py  models.py
server/trailine/apps/course/migrations/: 0001_initial.py  0002_courseseriesimage_priority_and_more.py
server/trailine/apps/privacy_terms/: admin.py  apps.py  models.py
server/trailine/apps/privacy_terms/migrations/: 0001_initial.py  0002_alter_privacytermversion_privacy_term.py
server/trailine/apps/users/: models.py
server/trailine/apps/users/migrations/: 0001_initial.py
server/trailine/config/: settings.py  storages.py  urls.py
server/trailine/config/settings/: base.py  development.py  production.py  testing.py
server/trailine/tests/: conftest.py
server/trailine/tests/api/v1/auth/: test_verify_email.py
web/: README.md  (+6 more)
(+37 files in other folders)
