[project]
name = "trailine-server"
version = "0.0.1"
description = "Hiking Guilde Service Server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django-filter>=25.1",
    "djangorestframework>=3.16.0",
    "markdown>=3.8",
    "psycopg2-binary>=2.9.10",
]

[dependency-groups]
dev = [
    "python-dotenv>=1.1.0",
]
