[project]
name = "admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.0",
    "sqladmin>=0.21.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.hatch.build]
packages = ["src/admin"]

[tool.uv]
package = false

[tool.uv.sources]
trailine_model = { workspace = true }

[project.scripts]
run-admin = "admin:main"
