[project]
name = "admin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.72",
    "boto3-stubs[s3]>=1.40.72",
    "fastapi>=0.121.0",
    "geoalchemy2>=0.18.0",
    "pillow>=12.1.0",
    "shapely>=2.1.2",
    "sqladmin>=0.21.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.hatch.build]
packages = ["src/admin"]

[tool.uv]
package = false

[tool.uv.sources]
trailine_model = { workspace = true }

[project.scripts]
run-admin = "admin:main"
